--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/typicode/json-server.git"
+    "url": "https://github.com/musicDr1ven/json-server.git"
   },
   "keywords": [
     "JSON",
